--- a/analyzer/analyzer.ipynb
+++ b/analyzer/analyzer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "outputs": [],
    "source": [
     "# !conda activate Investor-Sentiment\n",
@@ -23,21 +23,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 20 µs, sys: 64 µs, total: 84 µs\n",
-      "Wall time: 129 µs\n"
+      "CPU times: user 1.66 s, sys: 470 ms, total: 2.13 s\n",
+      "Wall time: 470 ms\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
     "# from tqdm import tqdm\n",
-    "\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
     "# from statsmodels.regression.rolling import RollingOLS"
    ],
    "metadata": {
@@ -55,14 +56,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 165 µs, sys: 708 µs, total: 873 µs\n",
-      "Wall time: 1.62 ms\n"
+      "CPU times: user 509 µs, sys: 629 µs, total: 1.14 ms\n",
+      "Wall time: 708 µs\n"
      ]
     }
    ],
@@ -88,14 +89,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 339 ms, sys: 520 ms, total: 859 ms\n",
-      "Wall time: 520 ms\n"
+      "CPU times: user 363 ms, sys: 244 ms, total: 607 ms\n",
+      "Wall time: 282 ms\n"
      ]
     },
     {
@@ -103,16 +104,15 @@
       "text/plain": "           ts_code trade_date  pct_chg    total_mv  riskfree_return  \\\n0        000001.SZ   20140102  -0.1641  10025400.0            5.910   \n1        000001.SZ   20140103  -2.4524   9779450.0            6.201   \n2        000001.SZ   20140106  -2.1804   9566320.0            6.475   \n3        000001.SZ   20140107  -0.3428   9533530.0            5.925   \n4        000001.SZ   20140108   1.1192   9640100.0            5.650   \n...            ...        ...      ...         ...              ...   \n7134605  873527.BJ   20221122  -2.0496     54518.8            1.947   \n7134606  873527.BJ   20221123   0.1101     54578.8            1.949   \n7134607  873527.BJ   20221124   0.0000     54578.8            1.940   \n7134608  873527.BJ   20221125  -0.2200     54458.7            1.924   \n7134609  873527.BJ   20221128   0.0000     54458.7            1.913   \n\n         index_return   img_neg   tex_neg  \n0             -0.3454  0.000000  0.000000  \n1             -1.3436  0.000000  0.333333  \n2             -2.2762  0.285714  0.142857  \n3             -0.0284  0.000000  0.333333  \n4              0.1747  0.333333  0.000000  \n...               ...       ...       ...  \n7134605        0.0118       NaN       NaN  \n7134606        0.1049       NaN       NaN  \n7134607       -0.4431       NaN       NaN  \n7134608        0.5049       NaN       NaN  \n7134609       -1.1265       NaN       NaN  \n\n[7134610 rows x 8 columns]",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>ts_code</th>\n      <th>trade_date</th>\n      <th>pct_chg</th>\n      <th>total_mv</th>\n      <th>riskfree_return</th>\n      <th>index_return</th>\n      <th>img_neg</th>\n      <th>tex_neg</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>000001.SZ</td>\n      <td>20140102</td>\n      <td>-0.1641</td>\n      <td>10025400.0</td>\n      <td>5.910</td>\n      <td>-0.3454</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>000001.SZ</td>\n      <td>20140103</td>\n      <td>-2.4524</td>\n      <td>9779450.0</td>\n      <td>6.201</td>\n      <td>-1.3436</td>\n      <td>0.000000</td>\n      <td>0.333333</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>000001.SZ</td>\n      <td>20140106</td>\n      <td>-2.1804</td>\n      <td>9566320.0</td>\n      <td>6.475</td>\n      <td>-2.2762</td>\n      <td>0.285714</td>\n      <td>0.142857</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>000001.SZ</td>\n      <td>20140107</td>\n      <td>-0.3428</td>\n      <td>9533530.0</td>\n      <td>5.925</td>\n      <td>-0.0284</td>\n      <td>0.000000</td>\n      <td>0.333333</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>000001.SZ</td>\n      <td>20140108</td>\n      <td>1.1192</td>\n      <td>9640100.0</td>\n      <td>5.650</td>\n      <td>0.1747</td>\n      <td>0.333333</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>7134605</th>\n      <td>873527.BJ</td>\n      <td>20221122</td>\n      <td>-2.0496</td>\n      <td>54518.8</td>\n      <td>1.947</td>\n      <td>0.0118</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>7134606</th>\n      <td>873527.BJ</td>\n      <td>20221123</td>\n      <td>0.1101</td>\n      <td>54578.8</td>\n      <td>1.949</td>\n      <td>0.1049</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>7134607</th>\n      <td>873527.BJ</td>\n      <td>20221124</td>\n      <td>0.0000</td>\n      <td>54578.8</td>\n      <td>1.940</td>\n      <td>-0.4431</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>7134608</th>\n      <td>873527.BJ</td>\n      <td>20221125</td>\n      <td>-0.2200</td>\n      <td>54458.7</td>\n      <td>1.924</td>\n      <td>0.5049</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>7134609</th>\n      <td>873527.BJ</td>\n      <td>20221128</td>\n      <td>0.0000</td>\n      <td>54458.7</td>\n      <td>1.913</td>\n      <td>-1.1265</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n  </tbody>\n</table>\n<p>7134610 rows × 8 columns</p>\n</div>"
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "%%time\n",
-    "import pandas as pd\n",
-    "\n",
     "df_panel = pd.read_parquet('../DataSets/TEMP_PANEL_FINAL.parquet')\n",
+    "# df_panel=df_panel.iloc[:10000, :]\n",
     "df_panel"
    ],
    "metadata": {
@@ -122,7 +122,16 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## 2.构造高低组合"
+    "## 2.构造分组高低组合"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "#### 2.1 计算面板数据的异质波动率IDVOL"
    ],
    "metadata": {
     "collapsed": false
@@ -130,7 +139,106 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO: Pandarallel will run on 8 workers.\n",
+      "INFO: Pandarallel will use standard multiprocessing data transfer (pipe) to transfer data between the main process and workers.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": "VBox(children=(HBox(children=(IntProgress(value=0, description='0.00%', max=625), Label(value='0 / 625'))), HB…",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "ed91d831091c4948848cb83b2cc180ce"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "index 4 is out of bounds for axis 0 with size 2\n",
+      "index 4 is out of bounds for axis 0 with size 1\n",
+      "index 4 is out of bounds for axis 0 with size 2\n",
+      "index 4 is out of bounds for axis 0 with size 3\n",
+      "CPU times: user 14.9 s, sys: 3.85 s, total: 18.7 s\n",
+      "Wall time: 9min 44s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "from statsmodels.regression.rolling import RollingOLS\n",
+    "\n",
+    "\n",
+    "def roll_idvol(df_code: pd.DataFrame, ols_window: int, var_ma: int) -> pd.DataFrame:\n",
+    "    \"\"\"\n",
+    "    滚动OLS回归求异质波动率\n",
+    "    \"\"\"\n",
+    "    try:\n",
+    "        # 定义回归变量 CAPM回归: (rm-rf)=a+b*(RM-rf)\n",
+    "        df_ols = pd.DataFrame()\n",
+    "        df_ols['Y'] = df_code['pct_chg'] - df_code['riskfree_return']\n",
+    "        df_ols['const'] = 1  #带截距项回归\n",
+    "        df_ols['X'] = df_code['index_return'] - df_code['riskfree_return']\n",
+    "\n",
+    "        # 估计参数\n",
+    "        model = RollingOLS(endog=df_ols['Y'].values, exog=df_ols[['const', 'X']], window=ols_window)\n",
+    "        df_para = model.fit().params\n",
+    "\n",
+    "        # 预测残差\n",
+    "        df_para['residual'] = df_para['const'] + df_ols['X']*df_para['X'] - df_ols['Y']\n",
+    "\n",
+    "        #计算月波动率\n",
+    "        df_para['idvol'] = df_para['residual'].rolling(var_ma).apply(lambda x: np.var(x, ddof=1))\n",
+    "\n",
+    "        return pd.concat([df_code[['ts_code', 'trade_date', 'pct_chg', 'total_mv',\n",
+    "                                   'index_return', 'img_neg', 'tex_neg']], df_para[['idvol']]],\n",
+    "                         axis=1)\n",
+    "\n",
+    "    except Exception as e:\n",
+    "        print(e)\n",
+    "        return pd.DataFrame()\n",
+    "\n",
+    "\n",
+    "# 多线程分组计算\n",
+    "if not os.path.exists('../DataSets/TEMP_PANEL_FINAL_IDVOL.parquet'):\n",
+    "    from pandarallel import pandarallel\n",
+    "\n",
+    "    pandarallel.initialize(progress_bar=True)\n",
+    "    df_out = (df_panel.groupby('ts_code')\n",
+    "              [['ts_code', 'trade_date', 'pct_chg', 'total_mv',\n",
+    "                'riskfree_return', 'index_return', 'img_neg', 'tex_neg']]\n",
+    "              .parallel_apply(lambda x: roll_idvol(x, 5, 30)))\n",
+    "\n",
+    "    # 保存异质波动率计算结果\n",
+    "    df_out.to_parquet('../DataSets/TEMP_PANEL_FINAL_IDVOL.parquet')"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### 2.2 按照异质波动率分组"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "execution_count": 5
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "outputs": [],
    "source": [],
    "metadata": {
