--- a/analyzer/analyzer.ipynb
+++ b/analyzer/analyzer.ipynb
@@ -1,18 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "outputs": [],
-   "source": [
-    "# !conda activate Investor-Sentiment\n",
-    "# !conda install -c conda-forge statsmodels"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
    "cell_type": "markdown",
    "source": [
     "# 情绪投资策略(2014-2022年全A股市场)"
@@ -23,14 +11,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 4 µs, sys: 0 ns, total: 4 µs\n",
-      "Wall time: 5.01 µs\n"
+      "CPU times: user 7 µs, sys: 0 ns, total: 7 µs\n",
+      "Wall time: 10.7 µs\n"
      ]
     }
    ],
@@ -459,9 +447,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "name": "stata",
    "language": "python",
-   "name": "python3"
+   "display_name": "Stata"
   },
   "language_info": {
    "codemirror_mode": {
