--- a/analyzer/analyzer.ipynb
+++ b/analyzer/analyzer.ipynb
@@ -11,14 +11,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 7 µs, sys: 0 ns, total: 7 µs\n",
-      "Wall time: 10.7 µs\n"
+      "CPU times: user 5 µs, sys: 2 µs, total: 7 µs\n",
+      "Wall time: 10.5 µs\n"
      ]
     }
    ],
@@ -26,6 +26,7 @@
     "%%time\n",
     "# from tqdm import tqdm\n",
     "import pandas as pd\n",
+    "import tqdm\n",
     "import numpy as np\n",
     "# from statsmodels.regression.rolling import RollingOLS"
    ],
