--- a/analyzer/analyzer.ipynb
+++ b/analyzer/analyzer.ipynb
@@ -11,24 +11,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 5 µs, sys: 2 µs, total: 7 µs\n",
-      "Wall time: 10.5 µs\n"
-     ]
+     "data": {
+      "text/plain": "['/home/ubuntu/notebook',\n '/usr/local/miniconda3/envs/Stata/lib/python39.zip',\n '/usr/local/miniconda3/envs/Stata/lib/python3.9',\n '/usr/local/miniconda3/envs/Stata/lib/python3.9/lib-dynload',\n '',\n '/home/ubuntu/.local/lib/python3.9/site-packages',\n '/usr/local/miniconda3/envs/Stata/lib/python3.9/site-packages',\n '/home/ubuntu/notebook/Investor-Sentiment',\n '/home/ubuntu/notebook/Investor-Sentiment',\n '/home/ubuntu/notebook/Investor-Sentiment',\n '/home/ubuntu/notebook/Investor-Sentiment',\n '/home/ubuntu/notebook/Investor-Sentiment']"
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "%%time\n",
-    "# from tqdm import tqdm\n",
-    "import pandas as pd\n",
-    "import tqdm\n",
-    "import numpy as np\n",
-    "# from statsmodels.regression.rolling import RollingOLS"
+    "import sys\n",
+    "\n",
+    "sys.path.append('/home/ubuntu/notebook/Investor-Sentiment')\n",
+    "from loader.findata_loader import DownLoader\n",
+    "\n",
+    "sys.path"
    ],
    "metadata": {
     "collapsed": false
@@ -38,6 +38,22 @@
    "cell_type": "markdown",
    "source": [
     "## 1.提取用于计算的面板数据"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "# from tqdm import tqdm\n",
+    "import pandas as pd\n",
+    "import tqdm\n",
+    "import numpy as np\n",
+    "# from statsmodels.regression.rolling import RollingOLS"
    ],
    "metadata": {
     "collapsed": false
