--- a/analyzer/analyzer.ipynb
+++ b/analyzer/analyzer.ipynb
@@ -21,26 +21,40 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "0it [00:00, ?it/s]\n",
+      "0it [00:00, ?it/s]\u001B[A\n",
+      "\n",
+      "0it [00:00, ?it/s]\u001B[A\n",
+      "0it [00:00, ?it/s]\n",
+      "0it [00:00, ?it/s]\n",
+      "\n",
+      "0it [00:00, ?it/s]\u001B[A\n",
+      "\n",
+      "0it [00:00, ?it/s]\u001B[A\n",
+      "0it [00:00, ?it/s]\n"
+     ]
+    }
+   ],
    "source": [
     "%%time\n",
+    "import sys\n",
     "\n",
-    "#下载时间序列数据\n",
-    "def load_daily_data():\n",
-    "    import sys\n",
-    "    sys.path.append('/home/ubuntu/notebook/Investor-Sentiment')\n",
-    "    from loader.findata_loader import DownLoader\n",
-    "    loader = DownLoader(MAX_CORE=10)\n",
-    "    loader.load_daily_data('pro_bar_e', 'FIN_DAILY_BAR')\n",
-    "    loader.load_daily_data('pro_bar_i', 'FIN_DAILY_INDEX')\n",
-    "    loader.load_daily_data('shibor', 'FIN_DAILY_INDEX')\n",
+    "sys.path.append('/home/ubuntu/notebook/Investor-Sentiment')\n",
+    "from loader.findata_loader import DownLoader\n",
     "\n",
-    "\n",
-    "load_daily_data()\n",
-    "# 转换面板数据\n"
+    "DownLoader(MAX_CORE=10).load_data()\n",
+    "\n"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "is_executing": true
+    }
    }
   },
   {
