--- a/analyzer/analyzer.ipynb
+++ b/analyzer/analyzer.ipynb
@@ -19,42 +19,68 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "### 1.1 加载数据"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import sys\n",
+    "\n",
+    "sys.path.append('/home/ubuntu/notebook/Investor-Sentiment')\n",
+    "\n",
+    "# 数据集:个股K线面板数据,个股基本面数据\n",
+    "data_list = ['ASHARE_BAR_PANEL.parquet', 'ASHARE_BASIC_PANEL.parquet']\n",
+    "if not set(data_list).issubset(os.listdir('./DataSets/')):\n",
+    "    from loader.findata_loader import DownLoader\n",
+    "\n",
+    "    DownLoader(MAX_CORE=10).load_data()\n",
+    "\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0it [00:00, ?it/s]\n",
-      "0it [00:00, ?it/s]\u001B[A\n",
-      "\n",
-      "0it [00:00, ?it/s]\u001B[A\n",
-      "0it [00:00, ?it/s]\n",
-      "0it [00:00, ?it/s]\n",
-      "\n",
-      "0it [00:00, ?it/s]\u001B[A\n",
-      "\n",
-      "0it [00:00, ?it/s]\u001B[A\n",
-      "0it [00:00, ?it/s]\n"
+      "CPU times: user 78.4 ms, sys: 57.1 ms, total: 136 ms\n",
+      "Wall time: 134 ms\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": "                      pct_chg\ntrade_date ts_code           \n19970626   000001.SZ     <NA>\n19970627   000001.SZ     <NA>\n19970702   000001.SZ     <NA>\n19970703   000001.SZ     <NA>\n19970704   000001.SZ     <NA>\n...                       ...\n20221122   873527.BJ  -2.0496\n20221123   873527.BJ   0.1101\n20221124   873527.BJ      0.0\n20221125   873527.BJ    -0.22\n20221128   873527.BJ      0.0\n\n[12359940 rows x 1 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th></th>\n      <th>pct_chg</th>\n    </tr>\n    <tr>\n      <th>trade_date</th>\n      <th>ts_code</th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>19970626</th>\n      <th>000001.SZ</th>\n      <td>&lt;NA&gt;</td>\n    </tr>\n    <tr>\n      <th>19970627</th>\n      <th>000001.SZ</th>\n      <td>&lt;NA&gt;</td>\n    </tr>\n    <tr>\n      <th>19970702</th>\n      <th>000001.SZ</th>\n      <td>&lt;NA&gt;</td>\n    </tr>\n    <tr>\n      <th>19970703</th>\n      <th>000001.SZ</th>\n      <td>&lt;NA&gt;</td>\n    </tr>\n    <tr>\n      <th>19970704</th>\n      <th>000001.SZ</th>\n      <td>&lt;NA&gt;</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <th>...</th>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>20221122</th>\n      <th>873527.BJ</th>\n      <td>-2.0496</td>\n    </tr>\n    <tr>\n      <th>20221123</th>\n      <th>873527.BJ</th>\n      <td>0.1101</td>\n    </tr>\n    <tr>\n      <th>20221124</th>\n      <th>873527.BJ</th>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>20221125</th>\n      <th>873527.BJ</th>\n      <td>-0.22</td>\n    </tr>\n    <tr>\n      <th>20221128</th>\n      <th>873527.BJ</th>\n      <td>0.0</td>\n    </tr>\n  </tbody>\n</table>\n<p>12359940 rows × 1 columns</p>\n</div>"
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "%%time\n",
-    "import sys\n",
+    "import cudf\n",
     "\n",
-    "sys.path.append('/home/ubuntu/notebook/Investor-Sentiment')\n",
-    "from loader.findata_loader import DownLoader\n",
-    "\n",
-    "DownLoader(MAX_CORE=10).load_data()\n",
-    "\n"
+    "df = (cudf.read_parquet('./DataSets/ASHARE_BAR_PANEL.parquet', columns=['trade_date', 'ts_code', 'pct_chg'])\n",
+    "      .set_index(['trade_date', 'ts_code']))\n",
+    "df"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "is_executing": true
-    }
+    "collapsed": false
    }
   },
   {
