--- a/analyzer/analyzer.ipynb
+++ b/analyzer/analyzer.ipynb
@@ -21,7 +21,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### 1.1 加载数据"
+    "### 1.1 加载面板数据"
    ],
    "metadata": {
     "collapsed": false
@@ -30,20 +30,33 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 58 µs, sys: 9 µs, total: 67 µs\n",
+      "Wall time: 72.7 µs\n"
+     ]
+    }
+   ],
    "source": [
-    "import os\n",
+    "%%time\n",
     "import sys\n",
+    "import os\n",
     "\n",
     "sys.path.append('/home/ubuntu/notebook/Investor-Sentiment')\n",
     "\n",
-    "# 数据集:个股K线面板数据,个股基本面数据\n",
-    "data_list = ['ASHARE_BAR_PANEL.parquet', 'ASHARE_BASIC_PANEL.parquet']\n",
-    "if not set(data_list).issubset(os.listdir('./DataSets/')):\n",
-    "    from loader.findata_loader import DownLoader\n",
     "\n",
-    "    DownLoader(MAX_CORE=10).load_data()\n",
-    "\n"
+    "def load_data():\n",
+    "    # 数据集:个股K线面板数据,个股基本面数据\n",
+    "    data_list = ['ASHARE_BAR_PANEL.parquet', 'ASHARE_BASIC_PANEL.parquet']\n",
+    "    if not set(data_list).issubset(os.listdir('./DataSets/')):\n",
+    "        from loader.findata_loader import DownLoader\n",
+    "        DownLoader(MAX_CORE=10).load_data()\n",
+    "\n",
+    "\n",
+    "load_data()"
    ],
    "metadata": {
     "collapsed": false
@@ -51,33 +64,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 85 ms, sys: 52.5 ms, total: 137 ms\n",
-      "Wall time: 136 ms\n"
+      "CPU times: user 3.45 s, sys: 1.88 s, total: 5.33 s\n",
+      "Wall time: 4.79 s\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": "                      pct_chg\ntrade_date ts_code           \n19970626   000001.SZ     <NA>\n19970627   000001.SZ     <NA>\n19970702   000001.SZ     <NA>\n19970703   000001.SZ     <NA>\n19970704   000001.SZ     <NA>\n...                       ...\n20221122   873527.BJ  -2.0496\n20221123   873527.BJ   0.1101\n20221124   873527.BJ      0.0\n20221125   873527.BJ    -0.22\n20221128   873527.BJ      0.0\n\n[12359940 rows x 1 columns]",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th></th>\n      <th>pct_chg</th>\n    </tr>\n    <tr>\n      <th>trade_date</th>\n      <th>ts_code</th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>19970626</th>\n      <th>000001.SZ</th>\n      <td>&lt;NA&gt;</td>\n    </tr>\n    <tr>\n      <th>19970627</th>\n      <th>000001.SZ</th>\n      <td>&lt;NA&gt;</td>\n    </tr>\n    <tr>\n      <th>19970702</th>\n      <th>000001.SZ</th>\n      <td>&lt;NA&gt;</td>\n    </tr>\n    <tr>\n      <th>19970703</th>\n      <th>000001.SZ</th>\n      <td>&lt;NA&gt;</td>\n    </tr>\n    <tr>\n      <th>19970704</th>\n      <th>000001.SZ</th>\n      <td>&lt;NA&gt;</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <th>...</th>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>20221122</th>\n      <th>873527.BJ</th>\n      <td>-2.0496</td>\n    </tr>\n    <tr>\n      <th>20221123</th>\n      <th>873527.BJ</th>\n      <td>0.1101</td>\n    </tr>\n    <tr>\n      <th>20221124</th>\n      <th>873527.BJ</th>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>20221125</th>\n      <th>873527.BJ</th>\n      <td>-0.22</td>\n    </tr>\n    <tr>\n      <th>20221128</th>\n      <th>873527.BJ</th>\n      <td>0.0</td>\n    </tr>\n  </tbody>\n</table>\n<p>12359940 rows × 1 columns</p>\n</div>"
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "%%time\n",
     "import cudf\n",
+    "import pandas as pd\n",
     "\n",
-    "df = (cudf.read_parquet('./DataSets/ASHARE_BAR_PANEL.parquet', columns=['trade_date', 'ts_code', 'pct_chg'])\n",
-    "      .set_index(['trade_date', 'ts_code']))\n",
-    "df"
+    "\n",
+    "def extract_data():\n",
+    "    def extract_panel():\n",
+    "        # 个股K线数据\n",
+    "        df_bar = (cudf.read_parquet('./DataSets/ASHARE_BAR_PANEL.parquet', columns=['trade_date', 'ts_code', 'pct_chg'])\n",
+    "                  .rename(columns={'pct_chg': 'share_return'}))\n",
+    "\n",
+    "        # 个股基本面数据\n",
+    "        df_basic = cudf.read_parquet('./DataSets/ASHARE_BASIC_PANEL.parquet', columns=['trade_date', 'ts_code', 'total_mv'])\n",
+    "\n",
+    "        # 合并\n",
+    "        df_panel = cudf.concat([df_bar, df_basic], join=\"left\", axis=1, sort=True)\n",
+    "\n",
+    "        # 压缩数据\n",
+    "        df_panel.index.levels[1].astype('category', inplace=True)\n",
+    "        return df_panel\n",
+    "\n",
+    "    def extract_time_series():\n",
+    "        # 股指数据\n",
+    "        from utils.sql import DB\n",
+    "        db_loader = DB()\n",
+    "        df_share_index = (\n",
+    "            pd.read_sql_table('399300.SZ', db_loader.ENGINE, 'FIN_DAILY_INDEX', columns=['trade_date', 'pct_chg'])\n",
+    "            .astype(dtype={'trade_date': 'uint32'}).set_index('trade_date')\n",
+    "            .rename(columns={'pct_chg': 'shareindex_return'}))\n",
+    "\n",
+    "        # shibor数据\n",
+    "        df_shibor = (pd.read_sql_table('SHIBOR', db_loader.ENGINE, 'FIN_DAILY_INDEX', columns=['trade_date', '3m'])\n",
+    "                     .astype(dtype={'trade_date': 'uint32'}).set_index('trade_date')\n",
+    "                     .rename(columns={'3m': 'riskfree_return'})/360)\n",
+    "\n",
+    "        df_time = pd.concat([df_share_index, df_shibor], join=\"inner\", axis=1, sort=True)\n",
+    "        return cudf.from_pandas(df_time)\n",
+    "\n",
+    "    def extract_merge():\n",
+    "        df_panel, df_time = extract_panel(), extract_time_series()\n",
+    "        df_m = cudf.merge(left=df_panel.reset_index(), right=df_time.reset_index(),\n",
+    "                          left_on='trade_date', right_on='trade_date', how=\"left\",\n",
+    "                          sort=True)\n",
+    "        return df_m.set_index(['trade_date', 'ts_code']).sort_index(ascending=[True, True])\n",
+    "\n",
+    "    return extract_merge()\n",
+    "\n",
+    "\n",
+    "df_panel = extract_data()"
    ],
    "metadata": {
     "collapsed": false
@@ -86,7 +133,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### 1.2 提取用于计算的面板数据"
+    "### 1.2 筛选和清洗数据"
    ],
    "metadata": {
     "collapsed": false
@@ -94,53 +141,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "%%time\n",
-    "# from tqdm import tqdm\n",
-    "import pandas as pd\n",
-    "import tqdm\n",
-    "import numpy as np\n",
-    "# from statsmodels.regression.rolling import RollingOLS"
+   "execution_count": 3,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "                      share_return      total_mv  shareindex_return  \\\ntrade_date ts_code                                                    \n20140102   000001.SZ       -0.1641  1.002537e+07            -0.3454   \n           000002.SZ       -0.4972  8.799966e+06            -0.3454   \n           000004.SZ        1.3734  9.917646e+04            -0.3454   \n           000005.SZ       -0.4000  2.276691e+05            -0.3454   \n           000006.SZ       -1.2164  6.574476e+05            -0.3454   \n...                            ...           ...                ...   \n20221130   872374.BJ       -1.7259           NaN             0.1199   \n20221201   301290.SZ       -8.7349  4.856403e+05             1.0831   \n           301311.SZ       12.7436  5.414400e+05             1.0831   \n           870199.BJ       -3.1447  1.498420e+05             1.0831   \n           872374.BJ        0.2066           NaN             1.0831   \n\n                      riskfree_return  \ntrade_date ts_code                     \n20140102   000001.SZ         0.015460  \n           000002.SZ         0.015460  \n           000004.SZ         0.015460  \n           000005.SZ         0.015460  \n           000006.SZ         0.015460  \n...                               ...  \n20221130   872374.BJ         0.006092  \n20221201   301290.SZ         0.006103  \n           301311.SZ         0.006103  \n           870199.BJ         0.006103  \n           872374.BJ         0.006103  \n\n[7143120 rows x 4 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th></th>\n      <th>share_return</th>\n      <th>total_mv</th>\n      <th>shareindex_return</th>\n      <th>riskfree_return</th>\n    </tr>\n    <tr>\n      <th>trade_date</th>\n      <th>ts_code</th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th rowspan=\"5\" valign=\"top\">20140102</th>\n      <th>000001.SZ</th>\n      <td>-0.1641</td>\n      <td>1.002537e+07</td>\n      <td>-0.3454</td>\n      <td>0.015460</td>\n    </tr>\n    <tr>\n      <th>000002.SZ</th>\n      <td>-0.4972</td>\n      <td>8.799966e+06</td>\n      <td>-0.3454</td>\n      <td>0.015460</td>\n    </tr>\n    <tr>\n      <th>000004.SZ</th>\n      <td>1.3734</td>\n      <td>9.917646e+04</td>\n      <td>-0.3454</td>\n      <td>0.015460</td>\n    </tr>\n    <tr>\n      <th>000005.SZ</th>\n      <td>-0.4000</td>\n      <td>2.276691e+05</td>\n      <td>-0.3454</td>\n      <td>0.015460</td>\n    </tr>\n    <tr>\n      <th>000006.SZ</th>\n      <td>-1.2164</td>\n      <td>6.574476e+05</td>\n      <td>-0.3454</td>\n      <td>0.015460</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>20221130</th>\n      <th>872374.BJ</th>\n      <td>-1.7259</td>\n      <td>NaN</td>\n      <td>0.1199</td>\n      <td>0.006092</td>\n    </tr>\n    <tr>\n      <th rowspan=\"4\" valign=\"top\">20221201</th>\n      <th>301290.SZ</th>\n      <td>-8.7349</td>\n      <td>4.856403e+05</td>\n      <td>1.0831</td>\n      <td>0.006103</td>\n    </tr>\n    <tr>\n      <th>301311.SZ</th>\n      <td>12.7436</td>\n      <td>5.414400e+05</td>\n      <td>1.0831</td>\n      <td>0.006103</td>\n    </tr>\n    <tr>\n      <th>870199.BJ</th>\n      <td>-3.1447</td>\n      <td>1.498420e+05</td>\n      <td>1.0831</td>\n      <td>0.006103</td>\n    </tr>\n    <tr>\n      <th>872374.BJ</th>\n      <td>0.2066</td>\n      <td>NaN</td>\n      <td>1.0831</td>\n      <td>0.006103</td>\n    </tr>\n  </tbody>\n</table>\n<p>7143120 rows × 4 columns</p>\n</div>"
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
    ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
    "source": [
-    "%%time\n",
-    "import os\n",
-    "\n",
-    "if not os.path.exists('../DataSets/TEMP_PANEL_FINAL.parquet'):\n",
-    "    from sqlalchemy import create_engine\n",
-    "\n",
-    "    ENGINE = create_engine('mysql+mysqlconnector://root:1111@localhost:3306')\n",
-    "    (pd.read_sql_table('TEMP_PANEL_FINAL', ENGINE,\n",
-    "                       schema='COLIN_PANEL',\n",
-    "                       columns=['ts_code', 'trade_date', 'pct_chg', 'total_mv',\n",
-    "                                'riskfree_return', 'index_return', 'img_neg', 'tex_neg']\n",
-    "                       )\n",
-    "     .astype(dtype={'ts_code': 'category', 'trade_date': 'category'})\n",
-    "     .to_parquet('../DataSets/TEMP_PANEL_FINAL.parquet'))\n"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "%%time\n",
-    "import pandas as pd\n",
-    "\n",
-    "df_panel = pd.read_parquet('../DataSets/TEMP_PANEL_FINAL.parquet')\n",
+    "df_panel = df_panel[df_panel.index.get_level_values('trade_date') >= 20140101].to_pandas()\n",
     "df_panel"
    ],
    "metadata": {
@@ -167,59 +181,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 9,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO: Pandarallel will run on 10 workers.\n",
+      "INFO: Pandarallel will use Memory file system to transfer data between the main process and workers.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": "VBox(children=(HBox(children=(IntProgress(value=0, description='0.00%', max=228), Label(value='0 / 228'))), HB…",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "30ae83b927324ad592779ebf45853b06"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 1.67 s, sys: 427 ms, total: 2.1 s\n",
+      "Wall time: 4.36 s\n"
+     ]
+    }
+   ],
    "source": [
     "%%time\n",
     "from statsmodels.regression.rolling import RollingOLS\n",
-    "import os\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
+    "# 多线程分组计算\n",
+    "from pandarallel import pandarallel\n",
     "\n",
     "\n",
-    "def roll_idvol(df_code: pd.DataFrame, ols_window: int, var_ma: int) -> pd.DataFrame:\n",
+    "def roll_idvol(df_code: cudf.DataFrame, ols_window: int, var_ma: int) -> pd.DataFrame:\n",
     "    \"\"\"\n",
     "    滚动OLS回归求异质波动率\n",
     "    \"\"\"\n",
     "    try:\n",
-    "        # 定义回归变量 CAPM回归: (rm-rf)=a+b*(RM-rf)\n",
-    "        df_ols = pd.DataFrame()\n",
-    "        df_ols['Y'] = df_code['pct_chg'] - df_code['riskfree_return']\n",
-    "        df_ols['const'] = 1  #带截距项回归\n",
-    "        df_ols['X'] = df_code['index_return'] - df_code['riskfree_return']\n",
+    "        # 索引\n",
     "\n",
     "        # 估计参数\n",
-    "        model = RollingOLS(endog=df_ols['Y'].values, exog=df_ols[['const', 'X']], window=ols_window)\n",
-    "        df_para = model.fit().params\n",
+    "        model = RollingOLS(endog=df_code[['Y']], exog=df_code[['CONST', 'X']], window=ols_window)\n",
+    "        df_para = model.fit().params.rename(columns={'CONST': 'Alpha', 'X': 'Beta'})\n",
     "\n",
-    "        # 预测残差\n",
-    "        df_para['residual'] = df_para['const'] + df_ols['X']*df_para['X'] - df_ols['Y']\n",
+    "        # 预测残差 已经对齐了\n",
+    "        df_con = pd.concat([df_code, df_para], axis=1)\n",
+    "        df_con['Residual'] = df_con['Alpha'] + df_con['Beta']*df_con['X'] - df_con['Y']\n",
     "\n",
-    "        #计算月波动率\n",
-    "        df_para['idvol'] = df_para['residual'].rolling(var_ma).apply(lambda x: np.var(x, ddof=1))\n",
-    "\n",
-    "        return pd.concat([df_code[['ts_code', 'trade_date', 'pct_chg', 'total_mv',\n",
-    "                                   'index_return', 'img_neg', 'tex_neg']], df_para[['idvol']]],\n",
-    "                         axis=1)\n",
+    "        # 计算月波动率\n",
+    "        df_con['Idvol'] = df_con['Residual'].rolling(var_ma).apply(lambda x: np.var(x, ddof=1))\n",
+    "        return df_con[['share_return', 'total_mv', 'Idvol']]\n",
     "\n",
     "    except Exception as e:\n",
-    "        print(e)\n",
-    "        return pd.DataFrame()\n",
+    "        return pd.DataFrame(columns=df_code.index.names).set_index(df_code.index.names)\n",
     "\n",
     "\n",
-    "if not os.path.exists('../DataSets/TEMP_PANEL_FINAL_IDVOL.parquet'):\n",
-    "    df_panel['riskfree_return'] = df_panel['riskfree_return']/360\n",
-    "    # 多线程分组计算\n",
-    "    from pandarallel import pandarallel\n",
+    "# 定义回归变量 CAPM回归: (rm-rf)=a+b*(RM-rf)\n",
+    "df_panel['Y'] = df_panel['share_return'] - df_panel['riskfree_return']\n",
+    "df_panel['CONST'] = 1  #带截距项回归\n",
+    "df_panel['X'] = df_panel['shareindex_return'] - df_panel['riskfree_return']\n",
     "\n",
-    "    pandarallel.initialize(progress_bar=True)\n",
-    "    df_out = (df_panel.groupby('ts_code')\n",
-    "              [['ts_code', 'trade_date', 'pct_chg', 'total_mv',\n",
-    "                'riskfree_return', 'index_return', 'img_neg', 'tex_neg']]\n",
-    "              .parallel_apply(lambda x: roll_idvol(x, 5, 30)))\n",
-    "\n",
-    "    # 保存异质波动率计算结果\n",
-    "    df_out.to_parquet('../DataSets/TEMP_PANEL_FINAL_IDVOL.parquet')"
+    "#多线程加速\n",
+    "pandarallel.initialize(progress_bar=True)\n",
+    "df_out = (df_panel.groupby(level=['ts_code'])[['share_return', 'total_mv', 'Y', 'CONST', 'X']]\n",
+    "          .parallel_apply(lambda x: roll_idvol(x, 5, 30))).droplevel(2)"
    ],
    "metadata": {
     "collapsed": false
