--- a/analyzer/analyzer.ipynb
+++ b/analyzer/analyzer.ipynb
@@ -35,8 +35,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 58 µs, sys: 9 µs, total: 67 µs\n",
-      "Wall time: 72.7 µs\n"
+      "CPU times: user 0 ns, sys: 60 µs, total: 60 µs\n",
+      "Wall time: 62.7 µs\n"
      ]
     }
    ],
@@ -110,6 +110,8 @@
     "        df_shibor = (pd.read_sql_table('SHIBOR', db_loader.ENGINE, 'FIN_DAILY_INDEX', columns=['trade_date', '3m'])\n",
     "                     .astype(dtype={'trade_date': 'uint32'}).set_index('trade_date')\n",
     "                     .rename(columns={'3m': 'riskfree_return'})/360)\n",
+    "\n",
+    "        # 情绪数据\n",
     "\n",
     "        df_time = pd.concat([df_share_index, df_shibor], join=\"inner\", axis=1, sort=True)\n",
     "        return cudf.from_pandas(df_time)\n",
